syntax = "proto3";

package jscomp;

option java_package = "com.google.javascript.jscomp.serialization";
option java_multiple_files = true;

message OptimizationJsdoc {
  repeated JsdocTag kind = 1;
  string license_text = 2;

  // Tags used by i18n messages.
  string description = 3;
  string meaning = 4;
  string alternate_message_id = 5;
}

enum JsdocTag {
  JSDOC_UNSPECIFIED = 0;

  JSDOC_NO_INLINE = 1;
  JSDOC_DEFINE = 2;

  // Side effects flags
  JSDOC_MODIFIES_THIS = 3;
  JSDOC_MODIFIES_ARGUMENTS = 4;
  JSDOC_THROWS = 6;
  JSDOC_NO_SIDE_EFFECTS = 7;

  // Used by DevirtualizeMethods and CollapseProperties
  JSDOC_CONSTRUCTOR = 8;
  JSDOC_INTERFACE = 9;

  // Used by CollapseProperties
  JSDOC_ENUM = 10;
  JSDOC_NO_COLLAPSE = 11;
  JSDOC_THIS = 12;
  JSDOC_CONST = 13;

  // Used by ReplaceIdGenerators
  JSDOC_ID_GENERATOR_CONSISTENT = 14;
  JSDOC_ID_GENERATOR_INCONSISTENT = 15;
  JSDOC_ID_GENERATOR_STABLE = 16;
  JSDOC_ID_GENERATOR_MAPPED = 17;
  JSDOC_ID_GENERATOR_XID = 18;

  // Used by ClosureCodeRemoval
  JSDOC_ABSTRACT = 19;

  // Used by Normalize
  // TODO(b/180010003): delete this tag
  JSDOC_EXPOSE = 20;

  // Used by ReplaceMessage i18n
  JSDOC_HIDDEN = 21;
  JSDOC_SUPPRESS_MESSAGE_CONVENTION = 22;

  // Used by CollapseProperties
  JSDOC_SUPPRESS_PARTIAL_ALIAS = 23;

  // Used by CrossChunkCodeMotion
  JSDOC_PURE_OR_BREAK_MY_CODE = 24;

  // Used by GlobalNamespace, CollapseProperties, and AggressiveInlineAliases
  JSDOC_COLLAPSIBLE_OR_BREAK_MY_CODE = 25;
}
